--- a/Terraform/Modules/Helm/jenkins-values.yaml
+++ b/Terraform/Modules/Helm/jenkins-values.yaml
@@ -3,6 +3,8 @@ controller:
     username: "${JENKINS_USERNAME}"
     password: "${JENKINS_PASSWORD}"
   serviceType: "LoadBalancer"
+  nodeSelector:
+    topology.kubernetes.io/zone: "${JENKINS_EBS_ZONE}"
 persistence:
-  storageClass: "gp2"
-  size: 8Gi
+  existingClaim: "${JENKINS_PVC}"
+  storageClass: "-"
