feat(jenkins): deploy ingress controller and configure routes

--- a/Terraform/Modules/Helm/values/jenkins.yaml
+++ b/Terraform/Modules/Helm/values/jenkins.yaml
@@ -2,9 +2,10 @@ controller:
   admin:
     username: "${JENKINS_USERNAME}"
     password: "${JENKINS_PASSWORD}"
-  serviceType: "LoadBalancer"
+  serviceType: "ClusterIP"
   nodeSelector:
     topology.kubernetes.io/zone: "${JENKINS_EBS_ZONE}"
+  jenkinsUriPrefix: "/jenkins"
 persistence:
   existingClaim: "${JENKINS_PVC}"
   storageClass: "-"
