--- a/Terraform/Modules/Helm/values/jenkins.yaml
+++ b/Terraform/Modules/Helm/values/jenkins.yaml
@@ -6,6 +6,9 @@ controller:
   nodeSelector:
     topology.kubernetes.io/zone: "${JENKINS_EBS_ZONE}"
   jenkinsUriPrefix: "/jenkins"
+  additionalPlugins:
+    - github:1.43.0
+    - github-api:1.321-488.v9b_c0da_9533f8
 persistence:
   existingClaim: "${JENKINS_PVC}"
   storageClass: "-"
