refactor(terraform): resolve module dependency conflicts

--- a/Terraform/Modules/Helm/values/eso.yaml
+++ b/Terraform/Modules/Helm/values/eso.yaml
@@ -1,3 +1,5 @@
 serviceAccount:
-  create: false
+  create: true
   name: "aws-sm-read-sa"
+  annotations:
+    eks.amazonaws.com/role-arn: ${SM_READ_ROLE_ARN}
