--- a/Manifest/custom.yaml
+++ b/Manifest/custom.yaml
@@ -41,9 +41,8 @@ database:
     port: 3306
   volumes:
     - name: mysql-data
-      hostPath:
-        path: /data
-        pathType: DirectoryOrCreate
+      persistentVolumeClaim:
+        claimName: application-pvc
   volumeMounts:
     - name: mysql-data
       mountPath: /var/lib/mysql
@@ -78,7 +77,7 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
   hosts:
-    - host: "todo-app.com"
+    - host: "app.todo-app.com"
       paths:
         - path: /
           pathType: Prefix
